k8s/ing/go_tracer_ing.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jaeger-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: go-tracer.com #hosts setting is required in advance on mac
      http:
        paths:
          - path: /
            backend:
              serviceName: go-tracer
              servicePort: 9090
