k8s/ing/jaegerquery_ing.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jaeger-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: jaeger-ui.com #hosts setting is required in advance on mac
      http:
        paths:
          - path: /
            backend:
              serviceName: jaeger-query
              servicePort: 8080
