k8s/ing/local_ing.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jaeger-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # backend:
  #   serviceName: jaeger-query
  #   servicePort: 8080
  rules:
    # - host: jaeger-ui.com #hosts setting is required in advance on mac
    #   http:
    #     paths:
    #       - path: /jaeger-ui #TODO: root path is required for jaeger-ui
    #         backend:
    #           serviceName: jaeger-query
    #           servicePort: 8080
    #       - path: /tracer-app #TODO: handler expects `/`, so it can not be used
    #         backend:
    #           serviceName: go-tracer
    #           servicePort: 9090
    - host: jaeger-ui.com #hosts setting is required in advance on mac
      http:
        paths:
          - path: /
            backend:
              serviceName: jaeger-query
              servicePort: 8080
    - host: go-tracer.com #hosts setting is required in advance on mac
      http:
        paths:
          - path: /
            backend:
              serviceName: go-tracer
              servicePort: 9090
